should finally stop all content shifts

--- a/components/ChatSingleMessage/ChatSingleMessage.module.scss
+++ b/components/ChatSingleMessage/ChatSingleMessage.module.scss
@@ -314,7 +314,6 @@
 
 .ogCard {
   padding: 12px;
-  margin-top: 4px;
   background-color: $white;
   border-radius: 12px;
   @include montserrat;
